--- a/home.html
+++ b/home.html
@@ -2,33 +2,49 @@
 <html>
 <head>
 <style>
+
+body {
+  background-color: darkolivegreen;
+}
 .city {
-  background-color: GREEN;
+  background-color: gray;
   color: white;
   border: 2px solid black;
   margin: 20px;
   padding: 20px;
+}
+a:link {
+  color: white;
+}
+a:visited {
+  color: darkgreen;
+}
+a:hover {
+  color: darkolivegreen;
+}
+a:active {
+  color: black;
 }
 </style>
 </head>
 <body>
 <h1>WELCOME TO MY WEBSITE!</h1>
 
-<p>here I get to tell you about myself.Sound like fun right?</p>
-<p>/p>
+<p>One of the cool applications you learn as a GIS student at Fleming college is creating a website. This website  was created to help me introduce myself as a professional</p>
+
 <div class="city">
-<h2>London</h2>
-<p>London is the capital of England.</p>
+
+<p><a href="/css/default.asp"><h2>Skills</h2></a></p>
 </div> 
 
 <div class="city">
-<h2>Paris</h2>
-<p>Paris is the capital of France.</p>
+
+<p><a href="/css/default.asp"><h2>Education</h2></a></p>
 </div>
 
 <div class="city">
-<h2>Tokyo</h2>
-<p>Tokyo is the capital of Japan.</p>
+
+<p><a href="/css/default.asp"><h2>Experience</h2></a></p>
 </div>
 
 </body>
