--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@ a:active {
 
 <div class="city">
 
-<p><a href="/css/default.asp"><h2>Education</h2></a></p>
+<p><a href="alielmohd.github.io/Education.html"><h2>Education</h2></a></p>
 </div>
 
 <div class="city">
