--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -6,12 +5,13 @@
 body {
   background-color: darkolivegreen;
 }
-.city {
+.options {
   background-color: gray;
   color: white;
   border: 2px solid black;
   margin: 20px;
   padding: 20px;
+  text-align: center;
 }
 a:link {
   color: white;
@@ -28,21 +28,23 @@ a:active {
 </style>
 </head>
 <body>
+
+<div class="options">
 <h1>WELCOME TO MY WEBSITE!</h1>
 
-<p>One of the cool applications you learn as a GIS student at Fleming college is creating a website. This website  was created to help me introduce myself as a professional</p>
-
-<div class="city">
+<p>One of the cool applications you learn as a GIS student at Fleming college is creating a website. This website  was created to help me introduce myself as a professional. </p>
+</div> 
+<div class="options">
 
 <p><a href="/css/default.asp"><h2>Skills</h2></a></p>
 </div> 
 
-<div class="city">
+<div class="options">
 
 <p><a href="alielmohd.github.io/Education.html"><h2>Education</h2></a></p>
 </div>
 
-<div class="city">
+<div class="options">
 
 <p><a href="/css/default.asp"><h2>Experience</h2></a></p>
 </div>
