--- a/index.html
+++ b/index.html
@@ -1,35 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-.city {
-  background-color: GREEN;
-  color: white;
-  border: 2px solid black;
-  margin: 20px;
-  padding: 20px;
-}
-</style>
+<link rel="stylesheet" href="mystyle.css">
+
 </head>
 <body>
 <h1>WELCOME TO MY WEBSITE!</h1>
 
-<p>here I get to tell you about myself.Sound like fun right?</p>
-<p>/p>
-<div class="city">
-<h2>London</h2>
-<p>London is the capital of England.</p>
-</div> 
+<ul>
+  <li><a href="#home">Skills</a></li>
+  <li><a href="#news">Education</a></li>
+  <li><a href="#contact">Experience</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 
-<div class="city">
-<h2>Paris</h2>
-<p>Paris is the capital of France.</p>
-</div>
 
-<div class="city">
-<h2>Tokyo</h2>
-<p>Tokyo is the capital of Japan.</p>
-</div>
+
 
 </body>
 </html>
