--- a/Education.html
+++ b/Education.html
@@ -4,48 +4,56 @@
 <style>
 
 body {
-  background-color: darkolivegreen;
+  background-color: dimgray;
 }
-.city {
-  background-color: gray;
-  color: white;
+.title {
+ color: black;
+ font-size: 30px;
+ font-family: Arial, Helvetica, sans-serif;
+  background-color: darkolivegreen;
   border: 2px solid black;
   margin: 20px;
   padding: 20px;
+  text-align: center;
 }
-a:link {
-  color: white;
+.sections {
+ color: black;
+ font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 20px;
+  padding: 20px;
+  text-align: left;
+    background-color: darkolivegreen;
+  border: 2px solid black;
 }
-a:visited {
-  color: darkgreen;
-}
-a:hover {
-  color: darkolivegreen;
-}
-a:active {
-  color: black;
-}
+
 </style>
 </head>
 <body>
-<h1>WELCOME TO MY WEBSITE!</h1>
 
-<p>One of the cool applications you learn as a GIS student at Fleming college is creating a website. This website  was created to help me introduce myself as a professional</p>
+<div class="title">
+<h1>Summary of Education</h1>
 
-<div class="city">
+</div> 
+<div class="sections">
 
-<p><a href="/css/default.asp"><h2>Skills</h2></a></p>
+<h1>2015-2020 – Chemical Engineering – Sudbury, ON</h1>
+<p>Undergraduate program with a specialization in Environmental Sustainability. Studies include Hydrogeology, Fluid Mechanics, Heat Transfer, Mass Transfer, and Process Control.</p>
 </div> 
 
-<div class="city">
+<div class="sections">
 
-<p><a href="/css/default.asp"><h2>Education</h2></a></p>
+<h1>2020-2021 – Environmental Engineering Applications – Cambridge, ON</h1>
+<p>Postgraduate program. Studies focus brownfield redevelopment, environmental monitoring, regulatory compliance and enforcement.</p>
 </div>
 
-<div class="city">
+<div class="sections">
 
-<p><a href="/css/default.asp"><h2>Experience</h2></a></p>
+<h1>2021-2022 (Anticipated)– Geographic Information Systems – Lindsay, ON</h1>
+<p>Postgraduate program. prepare and render geographic data using ArcGIS PRO, CATALYST and Avenza software.</p>
 </div>
-
+<footer>
+  <p>Footer</p>
+</footer>
 </body>
 </html>
