--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <h1>WELCOME TO MY WEBSITE!</h1>
 
 <ul>
-  <li><a href="#home">Skills</a></li>
-  <li><a href="#news">Education</a></li>
-  <li><a href="#contact">Experience</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="https://alielmohd.github.io/Skills.html">Skills</a></li>
+  <li><a href="https://alielmohd.github.io/Education.html">Education</a></li>
+  <li><a href="https://alielmohd.github.io/Experience.html">Experience</a></li>
 </ul>
 
 
