--- a/Education.html
+++ b/Education.html
@@ -54,7 +54,7 @@ body {
 <p>Postgraduate program. prepare and render geographic data using ArcGIS PRO, CATALYST and Avenza software.</p>
 </div>
 <footer>
-  <p>Footer</p>
+<a href="https://alielmohd.github.io/index.html">Home page</a>
 </footer>
 </body>
 </html>
