--- a/Skills.html
+++ b/Skills.html
@@ -40,6 +40,8 @@
 <div class="lines">
 <p><b>Programming languages:</b> Familiar with MATLAB (Simulink) and Python.</p>
 </div> 
-
+  <footer>
+<a href="https://alielmohd.github.io/index.html">Home page</a>
+</footer>
 </body>
 </html>
