--- a/index.html
+++ b/index.html
@@ -6,16 +6,32 @@
 
 </head>
 <body>
-<h1>WELCOME TO MY WEBSITE!</h1>
+<header><h1>WELCOME TO MY WEBSITE!</h1></header>
+<h4>One of the cool applications you learn as a GIS student at Fleming College is creating a websites. I dedicated this website to help me introduce myself as a professional.</h4>
+<!-- nav bar -->
 
 <ul>
   <li><a href="https://alielmohd.github.io/Skills.html">Skills</a></li>
   <li><a href="https://alielmohd.github.io/Education.html">Education</a></li>
   <li><a href="https://alielmohd.github.io/Experience.html">Experience</a></li>
 </ul>
+<aside>
+<p>currently located in Kitchener/ Waterloo area as can be obsereved above.  </p>
+</aside>
+<!-- api map 1 -->
+<div id="googleMap" style="width:25%;height:250px;left:145px;"></div>
+<script>
+function myMap() {
+var mapProp= {
+  center:new google.maps.LatLng(43.471283, -80.534264),
+  zoom:11,
+  mapTypeId: google.maps.MapTypeId.ROADMAP 
+  };
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
+}
+</script>
 
-
-
+<script src="https://maps.googleapis.com/maps/api/js?AIzaSyBUxvIhcqHLpBlOoC2oCSaUmN0I66JoaRA&callback=myMap"></script>
 </body>
 </html>
