--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <li><a href="https://alielmohd.github.io/Experience.html">Experience</a></li>
 </ul>
 <aside>
-<p>currently located in Kitchener/ Waterloo area as can be obsereved above.  </p>
+<p>currently located in Kitchener/ Waterloo area, as can be obsereved to the right.  </p>
 </aside>
 <!-- api map 1 -->
-<div id="googleMap" style="width:25%;height:250px;left:100px;"></div>
+<div id="googleMap" style="width:30%;height:250px;left:100px;"></div>
 <script>
 function myMap() {
 var mapProp= {
